[package]
name         = "lighthouse-common"
version      = "2.0.0"
edition      = "2021"
readme       = "README.md"
license-file = "../LICENSE"
description  = "Shared common library used in lighthouse protocol and sdk"
repository   = "https://github.com/Jac0xb/lighthouse"
license      = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]

default = []

[dependencies]
borsh      = { workspace = true, features = ["derive"] }
serde      = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
leb128     = { workspace = true }
