[package]
name                   = "orca-whirlpools"
description            = "Orca Whirlpools"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "orca_whirlpools"

[features]

[dependencies]
borsh          = { workspace = true }
solana-program = { workspace = true }

snafu = { workspace = true }

anchor-trait                = { workspace = true }
anchor-discriminator-derive = { workspace = true }
anchor-instructions-derive  = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }

[lints]
workspace = true
