[package]
name                   = "orca-whirlpools"
description            = "Orca Whirlpools"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "orca_whirlpools"

[features]
default          = ["fetch"]
anchor           = ["dep:anchor-lang"]
anchor-idl-build = []
serde            = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch            = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]
solana-v1        = []

[dependencies]
borsh       = { workspace = true }
lazy_static = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }

anchor-lang = { workspace = true, optional = true }

num-derive             = { workspace = true }
num-traits             = { workspace = true }
serde                  = { workspace = true, features = ["derive"], optional = true }
serde_with             = { workspace = true, optional = true }
serde-big-array        = { workspace = true, optional = true }
solana-program         = { workspace = true }
solana-sdk             = { workspace = true, optional = true }
solana-client          = { workspace = true, optional = true }
solana-account-decoder = { workspace = true, optional = true }

anchor-trait                = { workspace = true }
anchor-discriminator-derive = { workspace = true }
anchor-instructions-derive  = { workspace = true }
solana-common-core          = { workspace = true }
solana-accounts-derive      = { workspace = true }

[dev-dependencies]
base64   = { workspace = true }
proptest = "1.0.0"

[lints]
workspace = true
