[package]
name                   = "raydium-clmm"
description            = "Raydium CLMM"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "raydium_clmm"

[features]
default      = ["enable-power"]
enable-power = ["uint/enable-power"]

[dependencies]
borsh                = { workspace = true }
solana-program       = { workspace = true }
solana-program-error = { workspace = true }

snafu = { workspace = true }

anchor-trait                = { workspace = true }
anchor-discriminator-derive = { workspace = true }
anchor-instructions-derive  = { workspace = true }
solana-accounts-derive      = { workspace = true }
solana-common-core          = { workspace = true }

uint = { workspace = true, features = ["enable-power"] }

[dev-dependencies]
base64   = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
